@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Mar 2010; Froxlor Release Team <release@froxlor.org>
+  froxlor-0.9.2.1.ebuild, froxlor-9999.ebuild:
+  fixup installation from $FILESDIR just copy its contents to /usr/share to
+  make pkg_config(); install its files
+
 *froxlor-0.9.2.1 (02 Mar 2010)
 
   02 Mar 2010; Froxlor Release Team <release@froxlor.org>
